--- a/.cproject
+++ b/.cproject
@@ -1117,7 +1117,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="MedExpress.com.infineon.aurix.buildsystem.managed.projectType.1303461218" name="AURIX Project" projectType="com.infineon.aurix.buildsystem.managed.projectType"/>
+		<project id="STP-23L.com.infineon.aurix.buildsystem.managed.projectType.1303461218" name="AURIX Project" projectType="com.infineon.aurix.buildsystem.managed.projectType"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
